--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "src/app.js",
   "repository": "https://github.com/No-Country/s12-07-n-node-react.git",
   "author": "No Country",
+  "type": "module",
   "license": "MIT",
   "scripts": {
-  "start": "nodemon server.js",
-  "lint": "eslint .",
-  "lint:fix": "eslint --fix .",
-  "format": "prettier --write ."
-},
+    "start": "nodemon server.js",
+    "dev": "node ./src/app.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write ."
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
