--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node ./src/app.js",
     "dev": "nodemon run serve",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
